--- a/informacionVolt.html
+++ b/informacionVolt.html
@@ -45,16 +45,30 @@
             <div class="col-xxl-6 col-xl-5">
                 <h1 class="titulo">Volt</h1>
                 <div class="row">
-                    <div class="col-6">1</div>
-                    <div class="col-6">2</div>
+                    <div class="col-6">
+                      <h1>4 Meses</h1>
+                    </div>
+                    <div class="col-6">
+                      <h1>Esterilizado</h1>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">1</div>
-                    <div class="col-6">2</div>
+                    <div class="col-6">
+                      <h1>Mestizo</h1>
+                    </div>
+                    <div class="col-6">
+                      <h1>Con Chip</h1>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">1</div>
-                    <div class="col-6">2</div>
+                    <div class="col-6">
+                      <h1>Disponible para Adopción</h1>
+                    </div>
+                    <div class="col-6">
+                      <h1>
+                        Macho
+                      </h1>
+                    </div>
                 </div>
             </div>
         </div>
